--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  scrollbar-width: thin;
+  scrollbar-color: #808080 transparent;
+
+  scrollbar-width: thin;
+  scrollbar-color: #808080 transparent;
+}
+
+*::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #808080;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 html {
@@ -37,4 +57,104 @@ header {
   font-size: 2rem;
   width: 40rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+main {
+  margin: 0 auto;
+  max-width: 100rem;
+}
+
+.loading {
+  color: #fff;
+  text-align: center;
+}
+
+.today {
+  color: #e9e9e9;
+  margin-bottom: 2rem;
+}
+
+.today-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.today-temp {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.weather {
+  /* width: 100%; */
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.day {
+  background-color: rgba(233, 233, 233, 0.5);
+  padding: 1.6rem 0 2rem;
+  min-width: 15rem;
+  border-radius: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.2rem;
+  cursor: pointer;
+}
+
+.day span {
+  font-size: 5.2rem;
+}
+
+.day.important {
+  background-color: #ecc5c0;
+  outline: 2px solid #222;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body {
+    background-attachment: fixed;
+  }
+  main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+  .weather {
+    flex-direction: column;
+  }
+
+  .day {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1.6rem 2rem;
+  }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  main {
+  }
+
+  .weather {
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    justify-content: start;
+  }
+}
+@media only screen and (min-width: 768px) {
+}
+@media only screen and (min-width: 992px) {
+}
+@media only screen and (min-width: 1200px) {
+  .weather {
+    overflow-x: unset;
+  }
 }
