--- a/src/index.css
+++ b/src/index.css
@@ -33,13 +33,14 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
-  height: 100vh;
-  color: #222;
-  background: url("../public/background2.jpg");
+  /* height: 100vh; */
+  color: #e9e9e9;
+  background: url("/background2.jpg");
   padding: 2rem;
   background-size: cover;
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 header {
@@ -64,14 +65,23 @@ main {
   max-width: 100rem;
 }
 
+.location {
+  margin-top: 3rem;
+  font-weight: 300;
+  text-align: center;
+}
+
 .loading {
   color: #fff;
   text-align: center;
 }
 
-.today {
+.status {
   color: #e9e9e9;
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .today-info {
@@ -84,13 +94,46 @@ main {
   margin-bottom: 1rem;
 }
 
+.today {
+  text-align: right;
+}
+
+.options {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.switch {
+  font-size: 1.7rem;
+  border: #e9e9e9 1px solid;
+  border-radius: 5px;
+  width: fit-content;
+  cursor: pointer;
+  padding: 3px 0;
+}
+
+.switch span {
+  padding: 3px 15px;
+}
+
+.switch span.active {
+  background-color: rgba(233, 233, 233, 0.5);
+  color: #222;
+  font-weight: 600;
+}
+
+.switch span:not(:last-child) {
+  border-right: #e9e9e9 1px solid;
+}
+
 .weather {
   /* width: 100%; */
   list-style: none;
   display: flex;
   gap: 2.4rem;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .day {
@@ -98,16 +141,27 @@ main {
   padding: 1.6rem 0 2rem;
   min-width: 15rem;
   border-radius: 10px;
+  color: #222;
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  gap: 1.2rem;
   cursor: pointer;
 }
 
-.day span {
+.day .icon {
   font-size: 5.2rem;
+}
+
+.day div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.day .details {
+  font-size: 1.7rem;
 }
 
 .day.important {
@@ -117,9 +171,6 @@ main {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  body {
-    background-attachment: fixed;
-  }
   main {
     width: 100%;
     display: flex;
@@ -136,12 +187,17 @@ main {
     justify-content: space-between;
     padding: 1.6rem 2rem;
   }
+
+  .day div {
+    font-size: 1.5rem;
+  }
+
+  .day .details {
+    font-size: 1.2rem;
+  }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  main {
-  }
-
   .weather {
     overflow-x: scroll;
     -ms-overflow-style: none;
