--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,7 @@ main {
 
 .day {
   background-color: rgba(233, 233, 233, 0.5);
-  padding: 1.6rem 0 2rem;
+  padding: 1.6rem 2rem;
   min-width: 15rem;
   border-radius: 10px;
   color: #222;
@@ -158,6 +158,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1;
 }
 
 .day .details {
